# oncall-slacker

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yaml
src/: main.rs  pagerduty.rs  slack.rs
