[package]
name = "oncall-slacker"
authors = ["LOU Xun <xun.lou@controlant.com>"]
description = "Map current oncall shift to a Slack usergroup"
version = "0.1.0"
edition = "2021"

[dependencies]
isahc = { version = "1.7", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
